--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="author" content="SitePoint">
 
   <link rel="stylesheet" href="css/styles.css">
-  <link href='http://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="css/google_fonts.css">
 
 </head>
 
