--- a/index.html
+++ b/index.html
@@ -1,2 +1,60 @@
-# laisladeabrilcrafts.github.io
-La Isla De Abril Crafts - Landing Page
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+
+  <title>La Isla De Abril Crafts</title>
+  <meta name="description" content="La Isla De Abril Crafts">
+  <meta name="author" content="SitePoint">
+
+  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="css/google_fonts.css">
+
+</head>
+
+<body>
+  <script src="js/scripts.js"></script>
+
+  <div class="container">
+      <div class="header">
+        <div class="logo"></div>
+        <div class="text">@LaIslaDeAbrilCrafts</div>
+      </div>
+      <div class="cards">
+          <div class="card instagram" onclick="window.open('https://www.instagram.com/laisladeabrilcrafts','_blank')">
+                    <div class="logo"></div>
+                    <div class="text">Instagram</div>
+                </a>
+          </div>
+          <div class="card facebook" onclick="window.open('https://www.facebook.com/LaIslaDeAbrilCrafts','_blank')">
+            <div class="logo"></div>
+            <div class="text">Facebook</div>
+          </div>
+          <div class="card youtube" onclick="window.open('https://www.youtube.com/channel/UCBeV14_S_htuQAhf_gko_Vw','_blank')">
+            <div class="logo"></div>
+            <div class="text">Youtube</div>
+          </div>
+          <div class="card tiktok" onclick="window.open('https://www.tiktok.com/@laisladeabrilcrafts','_blank')">
+            <div class="logo"></div>
+            <div class="text">TikTok</div>
+          </div>
+      </div>
+  </div>
+  
+  <section class="sticky">
+    <div class="bubbles">
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+    </div>
+  </section>
+
+
+</body>
+</html>
